samples/_failures_safe/1761400424_ea2d2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ceddfd49.c: In function ‘main’:
./samples/SAFE/__tmp_ceddfd49.c:179:16: error: missing terminating " character
  179 |         printf("Token %d:
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_ceddfd49.c:179:9: error: expected expression at end of input
  179 |         printf("Token %d:
      |         ^~~~~~
./samples/SAFE/__tmp_ceddfd49.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ceddfd49.c:179:9: error: expected declaration or statement at end of input
